[metadata]
name = almanach
url = https://github.com/internap/almanach
author = Internap Hosting
author-email = opensource@internap.com
home-page = https://github.com/internap/almanach
license = Apache-2
summary = Stores usage of OpenStack volumes and instances for each tenant
description-file =
    README.md
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7

[files]
packages =
    almanach

[entry_points]
console_scripts =
    almanach_collector = almanach.collector:run
    almanach_api = almanach.api:run

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
