[metadata]
name = almanach
url = https://github.com/internap/almanach
author = Internap Hosting
author-email = opensource@internap.com
home-page = https://github.com/internap/almanach
license = Apache-2
summary = Stores usage of OpenStack volumes and instances for each tenant
description-file =
    README.rst
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7

[files]
packages =
    almanach

[entry_points]
oslo.config.opts =
    almanach = almanach.core.opts:list_opts
console_scripts =
    almanach-api = almanach.api.main:main
    almanach-collector = almanach.collector.main:main
tempest.test_plugins =
    almanach_tests = almanach.tests.tempest.plugin:AlmanachTempestPlugin

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
