[metadata]
name = almanach
url = https://almanach.readthedocs.io/
author = Internap Hosting
author-email = openstack-discuss@lists.openstack.org
home-page = https://almanach.readthedocs.io/
license = Apache-2
summary = Stores usage of OpenStack volumes and instances for each tenant
description-file =
    README.rst
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    almanach

[entry_points]
oslo.config.opts =
    almanach = almanach.core.opts:list_opts
console_scripts =
    almanach-api = almanach.api.main:main
    almanach-collector = almanach.collector.main:main
tempest.test_plugins =
    almanach_tests = almanach.tests.tempest.plugin:AlmanachTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
